# Seekphony

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.agent/: PLANS.md  REVIEW.md
.githooks/: _common.sh  commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
AI Music Frontend/: index.html
AI Music Frontend/js/: app.js
Frontend/: .env.example  Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
Frontend/css/: style.css
Frontend/js/: app.js
Frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
backend/: .env.example  Dockerfile  pyproject.toml  update_db.py
backend/src/seekphony_backend/: __init__.py  api.py  application.py  db.py  main.py  schemas.py
backend/src/seekphony_backend/core/: config.py  errors.py  normalization.py  security.py
backend/src/seekphony_backend/services/: analytics.py  audio.py  catalog.py  evaluations.py  explanations.py  matching.py  metadata.py  providers.py  reference_imports.py  search.py
backend/tests/: test_api.py  test_config.py  test_reference_imports.py
data/seeds/: songs.json
docs/: API_CONTRACT.md  ARCHITECTURE.md
docs/development/: documentation_pass.md
docs/qa/: current_inventory.md
frontend/: .env.example  Dockerfile  nginx.conf  vite.config.ts
frontend/public/: config.js
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  audioTiming.test.ts  audioTiming.ts  config.ts  setupTests.ts  styles.css  vite-env.d.ts
plans/done/: 001-backend-foundation.md  002-service-runtime-configuration.md  003-humming-spa-runtime.md  004-singing-evaluator-pivot.md  005-frontend-url-history-enhancements.md  006-anonymous-device-history-deployment-hardening.md
scripts/: SCRUB_README.md  build_local_data.py  check.sh  check_all.py  check_conventional_commits.py  check_local_data_builder.py  check_no_secrets.py  check_pyproject_dependencies.py  check_tool_versions.py  install_hooks.ps1  install_hooks.sh  replacements.txt.template  scan_secrets.py  scrub_with_git_filter_repo.sh  smoke.sh
