[project]
name = "seekphony-backend"
version = "0.1.0"
description = "Seekphony FastAPI backend for music search, catalog, recognition, and analytics."
authors = [
    { name = "McloiGG", email = "marcusloiminghan@gmail.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "audioread>=3.1.0",
    "fastapi==0.138.2",
    "httpx2==2.5.0",
    "librosa>=0.11.0",
    "python-multipart==0.0.32",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "uvicorn==0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff>=0.15,<0.16",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
