[project]
name = "seekphony-backend"
version = "0.1.0"
description = "Seekphony FastAPI backend for explainable reference-match singing evaluation."
authors = [
    { name = "McloiGG", email = "marcusloiminghan@gmail.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi==0.138.2",
    "httpx2==2.5.0",
    "psycopg==3.2.13",
    "psycopg-binary==3.2.13",
    "python-multipart==0.0.32",
    "uvicorn==0.49.0",
    "yt-dlp==2026.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
